--- a/css/common.css
+++ b/css/common.css
@@ -36,7 +36,11 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background: var(--color-theme);
+    background: linear-gradient(to right, var(--color-theme), #03947C);
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border-bottom: solid 2px var(--color-active);
+
 }
 
 nav>ul {
@@ -58,6 +62,8 @@ nav li a {
     font-size: 1em;
     font-weight: bold;
     color: var(--color-active);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 nav li.current-page a {
@@ -105,11 +111,12 @@ main section {
 footer {
     position: fixed;
     bottom: 0px;
-    background: var(--color-theme);
+    background: linear-gradient(to right, var(--color-theme), #03947C);
     width: 100%;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-top: solid 2px var(--color-active);
 }
 
 footer p {
@@ -117,8 +124,10 @@ footer p {
     color: white;
 }
 
-main p {
-    margin-bottom: 16px;
+main section div p {
+    margin-bottom: 10px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 /* Media Query: Estilos a aplicar sólo en pantallas mayores a 400px */
@@ -132,4 +141,27 @@ main p {
         padding-top: 20px;
         padding-bottom: 20px;
     }
+}
+
+#submit{
+    background-color: var(--color-theme);
+    color: white;
+    width: 84px;
+    height: 35px;
+    border-radius: 10px;
+    border: none;
+}
+
+#city-list{
+    background-color: white;
+    width: 148px;
+    height: 35px;
+    border-radius: 5px;
+}
+
+.card{
+    text-align: center;
+    box-shadow: 2px 2px 10px;
+    border-radius: 30px;
+    margin-top: 30px;
 }
