--- a/css/common.css
+++ b/css/common.css
@@ -165,3 +165,27 @@ main section div p {
     border-radius: 30px;
     margin-top: 30px;
 }
+
+.mensaje{
+    color: white;
+    margin-top: 30px;
+    width: 495px;
+    height: 55px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.mensaje.red{
+    background-color: #dc3545;
+}
+
+.mensaje.gren{
+    background-color: #28a745;
+}
+
+.mensaje.yellow{
+    background-color: #ffc107;
+}
