verificación de email con cartel y boton de limpiar form, TP terminado

--- a/css/pages/help.css
+++ b/css/pages/help.css
@@ -65,3 +65,8 @@ main div#none-valid-container{
     display: flex;
     justify-content: center
 }
+
+#butons{
+    display: flex;
+    flex-direction: row-reverse;
+}
