--- a/css/common.css
+++ b/css/common.css
@@ -185,6 +185,7 @@ main section div p {
     justify-content: center;
     border-radius: 15px;
     text-align: center;
+    text-shadow: 0 0 7px black;
 }
 
 .mensaje.red{
@@ -197,4 +198,50 @@ main section div p {
 
 .mensaje.yellow{
     background-color: #ffc107;
+}
+
+.loader {
+    --color-theme: #00594c;
+    --color-active: #5df2d6;
+	--size-mid: 6vmin;
+	--size-dot: 1.5vmin;
+	--size-bar: 0.4vmin;
+	--size-square: 3vmin;
+	
+	display: block;
+	position: relative;
+	width: 50%;
+	display: grid;
+	place-items: center;
+}
+
+.loader::before,
+.loader::after {
+	content: '';
+	box-sizing: border-box;
+	position: absolute;
+}
+
+.loader.--1::before {
+	width: var(--size-mid);
+	height: var(--size-mid);
+	border: 8px solid var(--color-theme);
+	border-top-color: transparent;
+	border-radius: 50%;
+	animation: loader-1 1s linear infinite;
+}
+
+.loader.--1::after {
+	width: calc(var(--size-mid) - 2px);
+	height: calc(var(--size-mid) - 2px);
+	border: 6px solid transparent;
+	border-top-color: var(--color-active);
+	border-radius: 50%;
+	animation: loader-1 0.6s linear reverse infinite;
+}
+
+@keyframes loader-1 {
+	100% {
+		transform: rotate(1turn);
+	}
 }
