--- a/css/pages/index.css
+++ b/css/pages/index.css
@@ -2,50 +2,7 @@
     width: auto;
     height: 100px;
 }
-/* Itenté poner el loader para lo que tarda en aparecer la card */
-.loader {
-    --color-theme: #00594c;
-    --color-active: #5df2d6;
-	--size-mid: 6vmin;
-	--size-dot: 1.5vmin;
-	--size-bar: 0.4vmin;
-	--size-square: 3vmin;
-	
-	display: block;
-	position: relative;
-	width: 50%;
-	display: grid;
-	place-items: center;
-}
 
-.loader::before,
-.loader::after {
-	content: '';
-	box-sizing: border-box;
-	position: absolute;
+#div-carga{
+	margin-top: 150px;
 }
-
-.loader.--1::before {
-	width: var(--size-mid);
-	height: var(--size-mid);
-	border: 8px solid var(--color-theme);
-	border-top-color: transparent;
-	border-radius: 50%;
-	animation: loader-1 1s linear infinite;
-}
-
-.loader.--1::after {
-	width: calc(var(--size-mid) - 2px);
-	height: calc(var(--size-mid) - 2px);
-	border: 6px solid transparent;
-	border-top-color: var(--color-active);
-	border-radius: 50%;
-	animation: loader-1 0.6s linear reverse infinite;
-}
-
-@keyframes loader-1 {
-	100% {
-		transform: rotate(1turn);
-	}
-}
-
